modificacion contacto y script

--- a/contacto.html
+++ b/contacto.html
@@ -16,7 +16,7 @@
         <div class="menu-item"><a href="#">Contacto</a></div>
     </div>
     <div class="container">
-    <form>
+    <form id="miFormulario">
         <!--nombre-->
   <div class="mb-3">
     <label for="exampleInputName" class="form-label">nombre</label>
@@ -27,7 +27,7 @@
     <input type="apellido_usuario" class="form-control" id="apellido" aria-describedby="LastNameHelp" placeholder="Hernández">
     <!--numero teléfono-->
     <div class="mb-3">
-    <label for="exampleInputLastName" class="form-label">Número Telefónico</label>
+    <label for="exampleInputphone" class="form-label">Número Telefónico</label>
     <input type="numero_usuario" class="form-control" id="n-telefono" aria-describedby="phoneHelp" placeholder="(55)-XXXX-XXXX">
     <!--correo-->
   </div>
